--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev:simple": "nodemon --exec tsx src/simple-server.ts",
     "build": "npx tsc src/simple-server.ts --outDir dist --target es2020 --module commonjs --esModuleInterop --skipLibCheck",
     "build:full": "tsc",
-    "start": "node dist/simple-server.js",
-    "start:simple": "node dist/simple-server.js",
+    "start": "node dist/app.js",
+    "start:simple": "node dist/app.js",
     "db:setup": "tsx --env-file .env scripts/setup-database.ts",
     "db:seed": "tsx --env-file .env scripts/seed-database.ts",
     "test": "jest",
