--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "tubos-monterrey-backend",
   "version": "1.0.0",
   "description": "Backend para Sistema de Solicitud de Crédito - TUBOS MONTERREY S.A. DE C.V.",
-  "main": "dist/simple-server.js",
-  "type": "commonjs",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon --exec tsx src/app.ts",
+    "dev": "nodemon server.js",
     "dev:simple": "nodemon --exec tsx src/simple-server.ts",
     "build": "npx tsc src/simple-server.ts --outDir dist --target es2020 --module commonjs --esModuleInterop --skipLibCheck",
     "build:full": "tsc",
-    "start": "node dist/app.js",
+    "start": "node server.js",
     "start:simple": "node dist/app.js",
     "db:setup": "tsx --env-file .env scripts/setup-database.ts",
     "db:seed": "tsx --env-file .env scripts/seed-database.ts",
